// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlist component should render list properly 1`] = `
<div
  className="playlists"
>
  <div
    className="playlists__background"
  />
  <div
    className="playlists__content"
  >
    <div
      className="playlists__header"
    >
      <div
        className="playlists__header-content"
      >
        <div
          className="playlists__message"
        >
          myMessage
        </div>
        <UserInfo
          onLogout={[Function]}
          user={null}
        />
      </div>
    </div>
    <div
      className="playlists__filter"
    >
      <TextField
        disabled={false}
        floatingLabelFixed={false}
        fullWidth={true}
        hintText="Filter"
        multiLine={false}
        onChange={[Function]}
        rows={1}
        type="text"
        underlineShow={true}
        value=""
      />
    </div>
    <div
      className="playlists__list-container"
    >
      <div
        className="playlists__list"
      >
        <PlaylistCard
          key="6ftJBzU2LLQcaKefMi7ee7"
          playlist={
            Object {
              "external_urls": Object {
                "spotify": "mylink",
              },
              "id": "6ftJBzU2LLQcaKefMi7ee7",
              "images": Array [
                Object {
                  "url": "myotherlink",
                },
              ],
              "name": "my playlist",
              "owner": Object {
                "external_urls": Object {
                  "spotify": "owner link",
                },
                "id": "ownerid",
              },
            }
          }
        />
        <PlaylistCard
          key="6ftJBzU2LLQcaKefMi7ee7"
          playlist={
            Object {
              "external_urls": Object {
                "spotify": "mylink",
              },
              "id": "6ftJBzU2LLQcaKefMi7ee7",
              "images": Array [
                Object {
                  "url": "myotherlink",
                },
              ],
              "name": "dif name",
              "owner": Object {
                "external_urls": Object {
                  "spotify": "owner link",
                },
                "id": "ownerid",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Playlist component should render loading properly 1`] = `
<div
  className="playlists"
>
  <div
    className="playlists__background"
  />
  <div
    className="playlists__content"
  >
    <div
      className="playlists__header"
    >
      <div
        className="playlists__header-content"
      >
        <Component />
        <UserInfo
          onLogout={[Function]}
          user={null}
        />
      </div>
    </div>
    <div
      className="playlists__filter"
    >
      <TextField
        disabled={false}
        floatingLabelFixed={false}
        fullWidth={true}
        hintText="Filter"
        multiLine={false}
        onChange={[Function]}
        rows={1}
        type="text"
        underlineShow={true}
        value=""
      />
    </div>
    <div
      className="playlists__list-container"
    >
      <Component />
    </div>
  </div>
</div>
`;
